--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "myy first website using react",
   "main": "app.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build":" parcel build index.html",
     "test": "jest"
   },
   "author": "admin",
